--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "recoil": "0.0.13",
     "webrtc-adapter": "^7.7.0"
   },
   "scripts": {
